--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
-    "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "react-spinners": "^0.13.8",
+    "react-calendar-heatmap": "^1.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
